# notepad

./: README.md  autorun.bat  config.py  main.py  pyproject.toml  requirements.txt
notepad/: main.py  notepad_ui.py  res.py
notepad/interface/: config.py  notepad_ui.py  res.py
notepad/qrc/: res.py  resource.qrc
notepad/ui/: Notepad.ui
notepad/uic/: Notepad.ui  notepad.py
qrc/: res.py  resource.qrc
ui/: Note.ui  Notepad.ui  note_ui.py  notepad_ui.py
