[tool.poetry]
name = "notepad"
version = "0.1.0"
description = ""
authors = ["nhassl3 <matvey.kvasov.05@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4.2"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
